--- a/index.html
+++ b/index.html
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <script src="angular.js"></script>
+        <script src="app.js"></script>
+
         <title>Flash Cards</title>
         <!-- We've provided some styles for you, aren't we nice? -->
         <link rel="stylesheet" type="text/css" href="reset.css" />
         <link rel="stylesheet" type="text/css" href="style.css" />
     </head>
-    <body>
-    </body>
+    <div ng-app="flashcards">
+      <div class="flash-card">
+    <h1>Is this a flash card?</h1>
+    <ul class="flash-card-answers">
+        <li class="flash-card-answer">
+            I mean, yeah.
+        </li>
+        <li class="flash-card-answer">
+            No, it's not.
+        </li>
+        <li class="flash-card-answer">
+            What's a flash card?
+        </li>
+    </ul>
+</div> 
+    </div>
 </html>
