--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" type="text/css" href="style.css" />
     </head>
     <div ng-app="flashcards">
-      <div class="flash-card">
+      <div class="flash-card" ng-controller="FlashCardController">
     <h1>Is this a flash card?</h1>
     <ul class="flash-card-answers">
         <li class="flash-card-answer">
