clicking a flashcard console logs the correctness value of the card clicked

--- a/index.html
+++ b/index.html
@@ -10,19 +10,20 @@
         <link rel="stylesheet" type="text/css" href="style.css" />
     </head>
     <div ng-app="flashcards">
-      <div class="flash-card" ng-controller="FlashCardController">
-    <h1>Is this a flash card?</h1>
-    <ul class="flash-card-answers">
-        <li class="flash-card-answer">
-            I mean, yeah.
-        </li>
-        <li class="flash-card-answer">
-            No, it's not.
-        </li>
-        <li class="flash-card-answer">
-            What's a flash card?
-        </li>
-    </ul>
-</div> 
+        <div class="flash-card" ng-controller="FlashCardController">
+            <h1>{{flashCard.question}}</h1>
+            <ul class="flash-card-answers" ng-repeat="answer in flashCard.answers">
+                <li class="flash-card-answer"
+                ng-click="checkAnswer(answer.correct)">
+                {{ answer.text }}
+                </li>
+                <li class="flash-card-answer">
+                No, it's not.
+                </li>
+                <li class="flash-card-answer">
+                What's a flash card?
+                </li>
+            </ul>
+        </div> 
     </div>
 </html>
